--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,8 @@
 /public/build/
 npm-debug.log
 yarn-error.log
+/.yarn
+/.npm
 ###< symfony/webpack-encore-bundle ###
 
 ###> symfony/phpunit-bridge ###
@@ -30,3 +32,5 @@ symfony.exe
 
 ### ide
 /.idea
+
+/.cache
